[gd_scene load_steps=8 format=3 uid="uid://cpkagefdu0v3n"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_b7ji1"]
[ext_resource type="FontFile" uid="uid://d2hvnek3wgb8n" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_ficqp"]
[ext_resource type="Theme" uid="uid://s3po41qesqw1" path="res://theme/custom_retry_button.tres" id="3_llky8"]
[ext_resource type="Theme" uid="uid://bugp7t3ntlrhx" path="res://theme/custom_settings_button.tres" id="4_w2tff"]
[ext_resource type="AudioStream" uid="uid://dxukrlcjepwat" path="res://assets/sounds/mouse_click.wav" id="5_7tiw7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aw5lq"]
bg_color = Color(0.468151, 1.77482e-06, 0.0049199, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.705882, 0.396078, 0.121569, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3oau0"]
bg_color = Color(0.579192, 0, 0.00693607, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.705882, 0.396078, 0.121569, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7ji1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.200211, 0.00237684, 1.8049e-08, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 108.0
offset_right = 920.0
offset_bottom = 367.0
theme_override_colors/font_color = Color(0.999943, 0.548842, 0.484912, 1)
theme_override_colors/font_outline_color = Color(0.707056, 0.394849, 0.122755, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("1_ficqp")
theme_override_font_sizes/font_size = 128
text = "GAME OVER!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 448.0
offset_right = 728.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("1_ficqp")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_aw5lq")
theme_override_styles/normal = SubResource("StyleBoxFlat_3oau0")
text = "MAIN MENU"

[node name="MenuTimer" type="Timer" parent="MainMenuButton"]
wait_time = 0.2

[node name="RetryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 544.0
offset_right = 544.0
offset_bottom = 608.0
pivot_offset = Vector2(32, 32)
theme = ExtResource("3_llky8")

[node name="RetryTimer" type="Timer" parent="RetryButton"]
wait_time = 0.2

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 544.0
offset_right = 672.0
offset_bottom = 608.0
theme = ExtResource("4_w2tff")

[node name="SettingsTimer" type="Timer" parent="SettingsButton"]
wait_time = 0.2

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7tiw7")
attenuation = 1.07177
bus = &"SFX"

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="MainMenuButton/MenuTimer" to="." method="_on_menu_timer_timeout"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="timeout" from="RetryButton/RetryTimer" to="." method="_on_retry_timer_timeout"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="timeout" from="SettingsButton/SettingsTimer" to="." method="_on_settings_timer_timeout"]
